--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -1,11 +1,13 @@
 @charset "utf-8";
-@import url('https://fonts.googleapis.com/css?family=Source+Code+Pro:400,700');
+@import url('https://fonts.googleapis.com/css?family=EB+Garamond|Source+Code+Pro&display=swap');
 
 /**
  * Style variables
  */
 $base-font-family:     'Source Code Pro', monospace !default;
 $base-font-size:       14px !default;
+$post-font-family:     'EB Garamond', serif !default;
+$post-font-size:       14px !default;
 $mobile-font-size:     12px !default;
 $base-line-height:     1.5 !default;
 $container-width:      90% !default;
