--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -4,10 +4,9 @@
 /**
  * Style variables
  */
-$base-font-family:     'Source Code Pro', monospace !default;
+//$base-font-family:     'Source Code Pro', monospace !default;
+$base-font-family:     'EB Garamond', serif !default;
 $base-font-size:       14px !default;
-$post-font-family:     'EB Garamond', serif !default;
-$post-font-size:       14px !default;
 $mobile-font-size:     12px !default;
 $base-line-height:     1.5 !default;
 $container-width:      90% !default;
