--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -22,7 +22,6 @@ a { text-decoration: underline;  color: var(--link-color); }
 a:hover { color: var(--background-color); background-color: var(--base-color); }
 .primary-text { color: var(--primary-color); }
 @media only screen and (max-device-width: 500px) { * { font-size: $mobile-font-size !important; } }
-code { line-height: 1; }
 /*h1:before { content: "#";  margin-right: 9px; }
 h2:before { content: "##";  margin-right: 9px; }
 h3:before { content: "###";  margin-right: 9px; }
@@ -34,11 +33,13 @@ h6:before { content: "######";  margin-right: 9px; }*/
  * Layout
  */
 .container { width: $container-width;  max-width: $container-max-width;  margin-right: auto;  margin-left: auto; }
-p { word-wrap: break-word;  word-break: break-word;  white-space: pre-wrap; }
+p { word-wrap: break-word;  word-break: break-word;  white-space: pre-wrap; padding-top: 10px; }
 footer { color: var(--text-color);  border-top: var(--border);  margin: 20px auto 15px;  padding-top: 10px;  text-align: right; }
 header { margin-top: 25px;  margin-bottom: 10px; }
 header p { text-align: left;  margin: 0; }
 footer { margin-bottom: 20px; }
+code { line-height: 1; }
+img { width: 100%; }
 
 /**
  * Highlight/Markup
